--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -8,7 +8,9 @@
 
 <header>헤더입니다. <!-- A#2 -->
     <div>회원가입</div> <!-- B#4 -->
+    <div>about</div>    <!-- A#8 -->
     <div>관리자</div>  <!-- B#6 -->
+    <div>장바구니</div> <!-- B#12 [feature/cart] -->
 </header>
 
 <article>
